--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import Header from '../components/Header.astro';
+import '@fontsource-variable/onest';
+
 interface Props {
 	title: string;
 }
@@ -28,15 +30,18 @@ const { title } = Astro.props;
 
 <style is:global>
 	:root {
-		
+		color-scheme: light dark;
 	}
 	html {
-		font-family: system-ui, sans-serif;
-		color-scheme: ligth dark;
+		font-family: 'Onest Variable',system-ui, sans-serif;
+		scroll-behavior: smooth;
 	}
 
 	body {
 		display: flex;
+		flex-direction: column;
 		justify-content: center;
+		min-height: 100vh;
+		overscroll-behavior: none;
 	}
 </style>
