--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
+import Hero from '../components/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Jordi Palacios | Portfolio">
 	<main>
+		<Hero />
 	</main>
 </Layout>
