description, hero and section component added

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,7 @@ import '@fontsource-variable/onest';
 
 interface Props {
 	title: string;
+	description: string;
 }
 
 const { title } = Astro.props;
