--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,17 @@
 ---
 import Hero from '../components/Hero.astro';
+import SectionContainer from '../components/SectionContainer.astro';
 import Layout from '../layouts/Layout.astro';
+
 ---
 
-<Layout title="Jordi Palacios | Portfolio">
-	<main>
-		<Hero />
+<Layout 
+	title="Porfolio | Jordi Palacios - Desarrollador y Programador Web"
+	description="Contrata a Jordi Palacios para desarrollar tu página web y hacerla única. Desarrollador Web. Especializado en crear experiencias. "
+>
+	<main class="px-4">
+		<SectionContainer>
+			<Hero />
+		</SectionContainer>
 	</main>
 </Layout>
