title - description - image reordered

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -4,22 +4,21 @@ import Badge from "./Badge.astro";
 
 ---
 
-<section class="w-full mx-auto flex flex-row justify-between">
-    <div>
-        <h1 class="text-white text-5xl font-bold flex flex-col items-center gap-x-4 pb-4 ">
-            <span>Hey,</span>
-            <div class="flex justify-center items-center"> 
-                <span>soy Jordi Palacios</span>
-                <Badge class="ml-30"> Disponible para trabajar</Badge>
-            </div>
-        </h1>
-        <h2 class="flex flex-row justify-center text-wrap">
-            +15 años de experiencia. Ingeniero de Software y Creador de Contenido sobre Programación de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web únicas.
-        </h2>
-    </div>
-    <img 
-        class="rounded-3xl mx-auto aspect-w-4 w-96  border-1 border-white shadow-lg"
-        src="../../public/fotoPerfil.jpg" 
+<section class="max-w-xl">
+    <div class="flex gap-4 mb-4">
+        <img 
+        class="rounded-full overflow-hidden size-16"
+        src="/fotoJordiPalacios.webp" 
         alt="fotoJordiPalacios"
-    >
+        >
+        <a href="https://www.linkedin.com/in/jordi-palacios-g%C3%B3mez-529046164" target="_blank" rel="noopener noreferrer">
+            <Badge> Disponible para trabajar </Badge>
+        </a>
+        </div>
+        <h1 class="text-white text-5xl font-bold flex flex-col items-center gap-x-4 pb-4 ">
+            <span> 👋 Hey, soy Jordi Palacios</span>
+        </h1>
+        <h2 class="text-2xl flex flex-row justify-center text-wrap">
+            +15 años de experiencia. Ingeniero de Software y Creador de Contenido sobre Programación de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web únicas.
+        </h2>   
 </section>
