--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -15,10 +15,14 @@ import Badge from "./Badge.astro";
             <Badge> Disponible para trabajar </Badge>
         </a>
         </div>
-        <h1 class="text-white text-5xl font-bold flex flex-col items-center gap-x-4 pb-4 ">
-            <span> 👋 Hey, soy Jordi Palacios</span>
+        <h1 class="text-white text-5xl font-bold flex flex-col items-start pb-4 ">
+            <span> 👋 Hey,</span>
+            <span>soy Jordi Palacios</span>
         </h1>
-        <h2 class="text-2xl flex flex-row justify-center text-wrap">
-            +15 años de experiencia. Ingeniero de Software y Creador de Contenido sobre Programación de Barcelona, España 🇪🇸. Especializado en el desarrollo de aplicaciones web únicas.
-        </h2>   
+        <p class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300">
+            +3 años de experiencia en la programación de autómatas.
+            <strong>Ingeniero en Electrónica y Automatización</strong>
+            de Barcelona, España 🇪🇸. 
+            Especializado en el desarrollo de aplicaciones web únicas.
+        </p>   
 </section>
