icons changed and hero

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -19,10 +19,10 @@ import Badge from "./Badge.astro";
             <span> 👋 Hey,</span>
             <span>soy Jordi Palacios</span>
         </h1>
-        <p class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-yellow-200 [&>strong]:text-yellow-500 [&>strong]:font-semibold dark:text-gray-300">
+        <p class="mt-6 text-xl text-gray-800 dark:[&>strong]:text-fuchsia-500 [&>strong]:text-fuchsia-800 [&>strong]:font-semibold dark:text-gray-300">
             +3 años de experiencia en la programación de autómatas.
             <strong>Ingeniero en Electrónica y Automatización</strong>
             de Barcelona, España 🇪🇸. 
-            Especializado en el desarrollo de aplicaciones web únicas.
+            Especializado .
         </p>   
 </section>
