--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 import '@fontsource-variable/onest';
 
 interface Props {
@@ -26,6 +27,7 @@ const { title } = Astro.props;
 		></div>
 		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
