header contacto añadido el correo y no una id

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@
         {
             title: 'Contacto',
             label: 'contacto',
-            url: '/#contacto'
+            url: 'mailto:palaciosgomezjordi@gmail.com'
         }
     ]
 ---
