--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@ const currentYear = new Date().getFullYear()
             © {currentYear}
             <a href="https://jordicode.dev/" class="hover:underline">jordiCode</a>. Desarrollado con mucho ☕️ y ❤️
         </span>
-        <ul class="flex flex-wrap items-center mt-3 text-sm font-medium dark:text-white/90 sm:mt-0">
+        <ul class="flex flex-wrap items-center mt-3 text-sm font-medium text-white/90 sm:mt-0">
             <li>
                 <a href="/#sobre-mi" class="hover:underline me-4 md:me-6">Sobre mí</a>
             </li>
