--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,11 +24,11 @@
 ---
 
 <header class="fixed top-0 z-10 flex items-center justify-center w-full mx-auto mt-2">
-    <nav class="flex px-3 text-sm font-medium rounded-full text-gray-600 dark:text-gray-200 justify-center items-center">
+    <nav class="flex px-3 text-sm font-medium rounded-full text-gray-200 justify-center items-center">
         {
             navItems.map((link) => (
                 <a
-                class="relative block px-2 py-2 transition hover:text-emerald-500 dark:hover:text-emerald-400"
+                class="relative block px-2 py-2 transition hover:text-emerald-400"
                 aria-label={link.label}
                 href={link.url}                
                 >
