check que pasa con el footer que da problemas y

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,6 +27,8 @@ const { title } = Astro.props;
 		></div>
 		<Header />
 		<slot />
+
+		<!-- ! Algo me falla en el footer -->
 		<Footer />
 	</body>
 </html>
