hero scroll done bg

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -12,7 +12,7 @@ import SocialMedia from "./SocialMedia.astro";
     <div class="flex items-center gap-4 mb-4">
         <img 
         class="rounded-full overflow-hidden size-40"
-        src="/jordiPalaciosBlue.png" 
+        src="/meBlueBg.webp" 
         alt="fotoJordiPalacios"
         >
         <a href="https://www.linkedin.com/in/jordi-palacios-g%C3%B3mez-529046164" target="_blank" rel="noopener noreferrer">
