--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -49,9 +49,9 @@
         if (entry.isIntersecting) {
             navItems.forEach((item) => {
             if (item.getAttribute("aria-label") == entry.target.id) {
-                item.classList.add("text-yellow-500")
+                item.classList.add("text-emerald-500")
             } else {
-                item.classList.remove("text-yellow-500")
+                item.classList.remove("text-emerald-500")
             }
             })
         }
