--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -27,10 +27,10 @@ const TAGS = {
 
 const PROJECTS = [
     {
-        image: '/visualShowProject.jpg',
+        image: '/visualShowWeb.jpg',
         tittle: 'VisualShow360 - Sitio web a medida para pequeña startup.',
         description: 'Sitio web SPA desarrollado con el objetivo de dar visibilidad y fiabilidad a la marca. Incremento del 10% en las ventas.',
-        description2: 'Creado desde cero con React, CSS y Vite. Desarrollo de custom hooks y componentes reutilizables, optimización de carga e implementación de SEO. Integración de formularios y animaciones. Diseño responsive y accesible.',
+        description2: 'Creado desde cero con React, CSS y Vite. Desarrollo de custom hooks y componentes reutilizables, optimización de carga e implementación de SEO. Integración de formularios y animaciones. Diseño responsive y accesible para el usuario.',
         link: 'https://github.com/JordiPalacios',
         github: 'https://github.com/JordiPalacios',
         tags: [TAGS.CSS,TAGS.REACT, TAGS.VITE]
@@ -70,8 +70,8 @@ const PROJECTS = [
                             ))}
                         </ul>
 
-                        <div class="mt-2 text-gray-400">{description}</div>
-                        <div class="mt-2 text-gray-400">{description2}</div>
+                        <div class="mt-2 text-gray-400 text-pretty">{description}</div>
+                        <div class="mt-2 text-gray-400 text-pretty">{description2}</div>
 
                         <footer class="flex items-end justify-start mt-4 gap-x-4">
                             {
