text description updated

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -10,7 +10,7 @@ import LinkProject from "../../public/icons/LinkProject.astro"
 const TAGS = {
     CSS: {
         name: 'CSS',
-        class: 'bg-[#10778e] text-white',
+        class: 'bg-[#047c97] text-white',
         icon: CSS,
     },
     REACT: {
@@ -28,13 +28,12 @@ const TAGS = {
 const PROJECTS = [
     {
         image: '/visualShowWeb.jpg',
-        tittle: 'VisualShow360 - Sitio web a medida para pequeña startup.',
-        description: 'Sitio web SPA desarrollado con el objetivo de dar visibilidad y fiabilidad a la marca. Incremento del 10% en las ventas.',
-        description2: 'Creado desde cero con React, CSS y Vite. Desarrollo de custom hooks y componentes reutilizables, optimización de carga e implementación de SEO. Integración de formularios y animaciones. Diseño responsive y accesible para el usuario.',
+        tittle: 'VisualShow360 - Sitio web hecho a medida para empresa especializada en filmación 360º',
+        description: 'Sitio web SPA desarrollado con el objetivo de dar visibilidad y fiabilidad a la marca. Obteniendo un incremento del 10% en las ventas.',
+        description2: 'Creado desde cero con React, CSS y Vite. Desarrollando custom hooks y componentes reutilizables, optimización de carga e implementación de SEO. Además, se han integrado animaciones y formularios. Diseñada usando la metodologia "Mobile First", haciendola responsive y accesible para el usuario.',
         link: 'https://github.com/JordiPalacios',
         github: 'https://github.com/JordiPalacios',
         tags: [TAGS.CSS,TAGS.REACT, TAGS.VITE]
-
     }
 ]
 ---
