--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -31,9 +31,9 @@ const PROJECTS = [
         tittle: 'VisualShow360 - Sitio web hecho a medida para empresa especializada en filmación 360º',
         description: 'Sitio web SPA desarrollado con el objetivo de dar visibilidad y fiabilidad a la marca. Obteniendo un incremento del 10% en las ventas.',
         description2: 'Creado desde cero con React, CSS y Vite. Desarrollando custom hooks y componentes reutilizables, optimización de carga e implementación de SEO. Además, se han integrado animaciones y formularios. Diseñada usando la metodologia "Mobile First", haciendola responsive y accesible para el usuario.',
-        link: 'https://github.com/JordiPalacios',
-        github: 'https://github.com/JordiPalacios',
-        tags: [TAGS.CSS,TAGS.REACT, TAGS.VITE]
+        link: 'https://visualshow360.com',
+        github: 'https://github.com/JordiPalacios/Personal-Porfolio',
+        tags: [TAGS.CSS,TAGS.REACT, TAGS.VITE],
     }
 ]
 ---
@@ -75,7 +75,7 @@ const PROJECTS = [
                         <footer class="flex items-end justify-start mt-4 gap-x-4">
                             {
                                 github && (
-                                    <LinkButton href={github} class="mt-4">
+                                    <LinkButton href={github} className="mt-4">
                                         <GitHub class="size-4" />
                                         Code
                                     </LinkButton>
@@ -83,9 +83,9 @@ const PROJECTS = [
                             }
                             {
                                 link && (
-                                    <LinkButton href={link} class="mt-4">
+                                    <LinkButton className="mt-4 cursor-not-allowed hover:opacity-50">
                                         <LinkProject class="size-4" />
-                                        Preview
+                                        Preview - 🚧 Available soon
                                     </LinkButton>
                                 )
                             }
