new image added

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -27,7 +27,7 @@ const TAGS = {
 
 const PROJECTS = [
     {
-        image: '/visualShowWeb.jpg',
+        image: '/visualShowWeb.webp',
         tittle: 'VisualShow360 - Sitio web hecho a medida para empresa especializada en filmación 360º',
         description: 'Sitio web SPA desarrollado con el objetivo de dar visibilidad y fiabilidad a la marca. Obteniendo un incremento del 10% en las ventas.',
         description2: 'Creado desde cero con React, CSS y Vite. Desarrollando custom hooks y componentes reutilizables, optimización de carga e implementación de SEO. Además, se han integrado animaciones y formularios. Diseñada usando la metodologia "Mobile First", haciendola responsive y accesible para el usuario.',
