--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -29,7 +29,7 @@ import SocialMedia from "./SocialMedia.astro";
         Especializado en el desarrollo de soluciones únicas y escalables adaptadas al cliente.
     </p>   
     <nav class="flex flex-wrap gap-4 mt-8">
-        <SocialMedia href="mailto:palaciosgomezjordi@gmail.com">
+        <SocialMedia href="mailto:hi@jordicode.dev">
             <Email class="size-4" />
             Contáctame
         </SocialMedia>
