--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@
         {
             title: 'Contacto',
             label: 'contacto',
-            url: 'mailto:palaciosgomezjordi@gmail.com'
+            url: 'mailto:hi@jordicode.dev'
         }
     ]
 ---
