--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -29,7 +29,8 @@ const PROJECTS = [
     {
         image: '/visualShowWeb.webp',
         tittle: 'VisualShow360 - Sitio web hecho a medida para empresa especializada en filmación 360º',
-        description: 'Sitio web SPA desarrollado con el objetivo de dar visibilidad y fiabilidad a la marca. Obteniendo un incremento del 10% en las ventas.',
+        description: 'Sitio web SPA desarrollado con el objetivo de dar visibilidad y fiabilidad a la marca.',
+        // Obteniendo un incremento del 10% en las ventas.
         description2: 'Creado desde cero con React, CSS y Vite. Desarrollando custom hooks y componentes reutilizables, optimización de carga e implementación de SEO. Además, se han integrado animaciones y formularios. Diseñada usando la metodologia "Mobile First", haciendola responsive y accesible para el usuario.',
         link: 'https://visualshow360.com',
         github: 'https://github.com/JordiPalacios/Personal-Porfolio',
@@ -85,7 +86,7 @@ const PROJECTS = [
                                 link && (
                                     <LinkButton className="mt-4 cursor-not-allowed hover:opacity-50">
                                         <LinkProject class="size-4" />
-                                        Preview - 🚧 Available soon
+                                        Preview - Available soon
                                     </LinkButton>
                                 )
                             }
