gramatical errors fixed

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -12,20 +12,20 @@ const startingYear = new Date().getFullYear() - 2022
         </p>
 
         <p>
-            Todo empezo por unas simples pregunta, hace {startingYear} años: <br>
+            Todo empezó por unas simples preguntas, hace {startingYear} años: <br>
             <strong>¿Cómo se crea una página web? ¿Seré capaz de crear una?</strong> <br>
             Desde entonces, no he parado de aprender y experimentar en el mundo de la programación.
         </p>
 
         <p>
-            Entre mis éxitos más recientes, destaco el <strong>desarrollo de la página web para Visual Show</strong>, una pequeña startup de video 360º especializada en bodas.
+            Entre mis éxitos más recientes, destaco el <strong>desarrollo de la página web para Visual Show</strong>, una pequeña empresa de video 360º especializada en bodas.
             Actualmente ya estoy trabajando en un <strong>nuevo reto web para  Teléfono Audiolibro.</strong>
         </p>
 
         <p>
             Saliendo de lo profesional, soy una persona muy activa. <br>
             En mi tiempo libre, me gusta <strong>hacer deporte y viajar</strong>. Desconectando un poco de la rutina diaria para recargar pilas.
-            De este modo siempre tengo la mente fresca para afrontar <strong> nuevos retos y ganas de seguir aprendiendo. </strong>
+            De este modo siempre tengo la mente fresca para afrontar <strong> nuevos retos y ganas de seguir aprendiendo.</strong>
         </p>
     </div>
     <img width="200" height="200" src="/me.webp" alt={personalImgAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-emerald-500/5 ring-1 ring-white/20" style="object-position: 50% 50%">
