--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,7 +24,7 @@ import SocialMedia from "./SocialMedia.astro";
     </h1>
     <p class="mt-6 text-xl text-gray-300 [&>strong]:text-emerald-500 [&>strong]:font-semibold">
         +3 años de experiencia en la programación de autómatas.
-        <strong>Ingeniero en Electrónica y Automatización</strong>
+        <strong>Ingeniero en Electrónica y Automática</strong>
         de Barcelona, España 🇪🇸. 
         Especializado en el desarrollo de soluciones únicas y escalables adaptadas al cliente.
     </p>   
