link for visualshow360 added

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -84,9 +84,9 @@ const PROJECTS = [
                             }
                             {
                                 link && (
-                                    <LinkButton className="mt-4 cursor-not-allowed hover:opacity-50">
+                                    <LinkButton href={link} className="mt-4 cursor-pointer">
                                         <LinkProject class="size-4" />
-                                        Preview - Available soon
+                                        Preview
                                     </LinkButton>
                                 )
                             }
