Added midudev reference

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -27,6 +27,10 @@ const startingYear = new Date().getFullYear() - 2022
             En mi tiempo libre, me gusta <strong>hacer deporte y viajar</strong>. Desconectando un poco de la rutina diaria para recargar pilas.
             De este modo siempre tengo la mente fresca para afrontar <strong> nuevos retos y ganas de seguir aprendiendo.</strong>
         </p>
+
+        <p>
+            Agradecer a <strong><a href="https://www.instagram.com/midu.dev/" target="_blank">midu.dev</a></strong> por el contenido aportado y la inspiración para crear este porfolio web.
+        </p>
     </div>
     <img width="200" height="200" src="/me.webp" alt={personalImgAlt} class="order-1 object-cover w-64 h-full p-1 md:order-2 rotate-3 lg:p-2 lg:w-64 aspect-square rounded-2xl bg-emerald-500/5 ring-1 ring-white/20" style="object-position: 50% 50%">
 </article>
