added telstar experience

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,7 +3,14 @@ import ExperienceItem from "./ExperienceItem.astro"
 
 const EXPERIENCE = [
     {
-        date: '2021 - Presente',
+        date: '2024 - Presente',
+        title: 'Control Engineer',
+        company: 'Telstar',
+        description: 
+            'Diseño y programación del autómata para su correcto funcionamiento, configurando los diferentes componentes y comunicaciones. Ejecutando las validaciones de software y hardware correspondietes. Asistiendo finalmente a las puestas en marcha de las instalaciones del cliente.',
+    },
+    {
+        date: '2021 - 2024',
         title: 'Software Department',
         company: 'Deima Ingenieros S.A.',
         description: 
