sobre mi actualizado a día de hoy

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -18,14 +18,14 @@ const startingYear = new Date().getFullYear() - 2022
         </p>
 
         <p>
-            Entre mis éxitos más recientes, destaco el <strong>desarrollo de la página web para Visual Show</strong>, una pequeña empresa de video 360º especializada en bodas.
-            Actualmente ya estoy trabajando en un <strong>nuevo reto web para  Teléfono Audiolibro.</strong>
+            Entre mis éxitos más recientes, destaco el <strong>desarrollo de la página web para <a href="https://visualshow360.com" class="underline">Visual Show</a></strong>, una pequeña empresa de video 360º especializada en bodas.
+            Actualmente ya estoy trabajando en un <strong>nuevo reto web para Teléfono Audiolibro.</strong>
         </p>
 
         <p>
             Saliendo de lo profesional, soy una persona muy activa. <br>
             En mi tiempo libre, me gusta <strong>hacer deporte y viajar</strong>. Desconectando un poco de la rutina diaria para recargar pilas.
-            De este modo siempre tengo la mente fresca para afrontar <strong> nuevos retos y ganas de seguir aprendiendo.</strong>
+            De este modo siempre tengo la mente fresca para afrontar <strong> nuevos retos.</strong>
         </p>
 
         <p>
