proyectos añadidos, pokemon y tictactoe

--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -3,6 +3,13 @@ import ExperienceItem from "./ExperienceItem.astro"
 
 const EXPERIENCE = [
     {
+        date: '2022 - Presente',
+        title: 'Frontend Developer',
+        company: 'Freelance',
+        description: 
+            'Desarrollo sitios web a medida con tecnologías modernas como React, CSS, Tailwind y Vite. Aplico la metodología "Mobile First" para garantizar una experiencia óptima en cualquier dispositivo. Creo aplicaciones SPA con React Router, optimizando rendimiento y SEO mediante metatags, transformando ideas en experiencias digitales únicas.',
+    },
+    {
         date: '2024 - Presente',
         title: 'Control Engineer',
         company: 'Telstar',
