nuevos proyectos añadidos

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -31,10 +31,28 @@ const PROJECTS = [
         tittle: 'VisualShow360 - Sitio web hecho a medida para empresa especializada en filmación 360º',
         description: 'Sitio web SPA desarrollado con el objetivo de dar visibilidad y fiabilidad a la marca.',
         // Obteniendo un incremento del 10% en las ventas.
-        description2: 'Creado desde cero con React, CSS y Vite. Desarrollando custom hooks y componentes reutilizables, optimización de carga e implementación de SEO. Además, se han integrado animaciones y formularios. Diseñada usando la metodologia "Mobile First", haciendola responsive y accesible para el usuario.',
+        description2: 'Creado desde cero con React, CSS y Vite. Desarrollando custom hooks y componentes reutilizables, optimización de carga e implementación de SEO. Además, se han integrado animaciones y formularios. Diseñada usando la metodologia "Mobile First", haciéndola responsive y accesible para el usuario.',
         link: 'https://visualshow360.com',
         github: 'https://github.com/JordiPalacios/Personal-Porfolio',
         tags: [TAGS.CSS,TAGS.REACT, TAGS.VITE],
+    },
+    {
+        image: '/pokemon.webp',
+        tittle: 'POKÉMON - Sitio web SPA para la búsqueda y gestión de pokémons de primera generación',
+        description: 'Aplicación web diseñada para realizar consultas dinámicas a una API de Pokémon.',
+        description2: 'Utilizando React Router para la navegación. Además, cuenta con la implementación de un sistema de búsqueda avanzado y la funcionalidad de marcar pokémons como favoritos. Creados a partir de custom hooks, la búsqueda de pokémons se basa en estados y actualizaciones de datos.',
+        link: 'https://jordicode-pokemon1stgeneration.surge.sh/',
+        github: 'https://github.com/JordiPalacios/Pokemon1stGeneration',
+        tags: [TAGS.CSS, TAGS.REACT, TAGS.VITE],
+    },
+    {
+        image: '/tictactoe.webp',
+        tittle: 'Tic Tac Toe - Juego clásico desarrollado con React',
+        description: 'Aplicación interactiva del clásico juego de Tic Tac Toe, diseñada para ofrecer una experiencia fluida y dinámica.',
+        description2: 'Desarrollada con React, esta aplicación utiliza estados para gestionar el flujo del juego, incluyendo el seguimiento de turnos, detección de ganadores y reinicio del tablero.',
+        link: 'https://palacios-react01.surge.sh/',
+        github: 'https://github.com/JordiPalacios/TicTacToe/tree/master/01-TicTacToe',
+        tags: [TAGS.CSS, TAGS.REACT, TAGS.VITE],
     }
 ]
 ---
