link arreglado en visualshow

--- a/src/components/Projects.astro
+++ b/src/components/Projects.astro
@@ -33,7 +33,7 @@ const PROJECTS = [
         // Obteniendo un incremento del 10% en las ventas.
         description2: 'Creado desde cero con React, CSS y Vite. Desarrollando custom hooks y componentes reutilizables, optimización de carga e implementación de SEO. Además, se han integrado animaciones y formularios. Diseñada usando la metodologia "Mobile First", haciéndola responsive y accesible para el usuario.',
         link: 'https://visualshow360.com',
-        github: 'https://github.com/JordiPalacios/Personal-Porfolio',
+        github: 'https://github.com/JordiPalacios/VisualShow360Web?tab=readme-ov-file',
         tags: [TAGS.CSS,TAGS.REACT, TAGS.VITE],
     },
     {
