new changes updated, adding telefono audiolibro webside

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -19,7 +19,7 @@ const startingYear = new Date().getFullYear() - 2022
 
         <p>
             Entre mis éxitos más recientes, destaco el <strong>desarrollo de la página web para <a href="https://visualshow360.com" class="underline">Visual Show</a></strong>, una pequeña empresa de video 360º especializada en bodas.
-            Actualmente ya estoy trabajando en un <strong>nuevo reto web para Teléfono Audiolibro.</strong>
+            Actualmente, <strong><a href="https://telefonoaudiolibro.es" class="underline">Teléfono Audiolibro</a></strong> ya se encuentra totalmente operativa. Completando así mi <strong>segundo gran reto para Teléfono Audiolibro.</strong>
         </p>
 
         <p>
